--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+checkpoints/
+train.py # Cerebra's property (???)
+checkpoints/
+runs/
+distilbert
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -127,3 +133,5 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+train.py
